# bmake

./: .gitignore  README.md  ROADMAP.md  fix.sh  package-lock.json  package.json  shared.ts
client/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: error.tsx  layout.tsx  page.tsx  server.tsx  style.css
client/app/game/: game.tsx  page.tsx
client/app/new/: page.tsx
client/components/: board.tsx  clientutil.tsx  cm.tsx  code_editor.tsx  footer.tsx  loadingscreen.tsx  names.json  types.ts  util.tsx  wrapper.tsx
cpp/: .gitignore  CMakeLists.txt  chess.cpp  chess.hpp  lua.cpp  lua_interface.cpp  lua_interface.hpp  main.cpp  main_old.cpp  nn.cpp  nn.hpp  perf.data  pool.hpp  search copy.hpp  search.hpp  search2.hpp  search_test.cpp  server_io.cpp  server_io.hpp  trainer.hpp  util.hpp
lua-scripts/chess/: chess.lua  chess2.lua  specification.lua
server/: .env  .gitignore  core_io.ts  deno.json  main.ts
